# helium-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
include/He/: Log.hpp
include/He/App/: BaseWindow.hpp  GLFW3Window.hpp  Input.hpp
include/He/Core/World/: Chunk.hpp  Direction.hpp  Voxel.hpp  World.hpp
include/He/Graphics/GL/: Camera.hpp  ElementBufferObject.hpp  Mesh.hpp  Shader.hpp  VertexArrayObject.hpp  VertexBufferObject.hpp
include/He/Utils/: Array.hpp
resources/assets/shaders/: default.frag  default.vert
source/: main.cpp
source/He/: Log.cpp
source/He/App/: BaseWindow.cpp  GLFW3Window.cpp  Input.cpp
source/He/Core/World/: Chunk.cpp  Voxel.cpp  World.cpp
source/He/Graphics/GL/: Camera.cpp  ElementBufferObject.cpp  Mesh.cpp  Shader.cpp  VertexArrayObject.cpp  VertexBufferObject.cpp
